Read, List, Update, and Delete endpoints were implemented using a TDD approach. Setup.cfg was configured for nosetests. Complete test cases were added.

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# Carpeta de proyecto personal (no subir a GitHub)
+proyecto/
+IMPLEMENTATION_GUIDE.md
