--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: accounts
     spec:
       containers:
-      - image: us.icr.io/$SN_ICR_NAMESPACE/accounts:1
+      - image: IMAGE_NAME_HERE
         name: accounts
         env:
         - name: DATABASE_HOST
